overflow fix

--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -341,9 +341,13 @@ text-align: center;
 
 @media (max-width: 1000px) {
 	html{
-		overflow-x:hidden;
+		/* overflow-x:hidden; */
 		padding: 0;
 	}
+.portfolio{
+	overflow: hidden;
+
+}
 .MenuButton{
 	margin-left: 5rem;
 	top:5%;
@@ -385,13 +389,14 @@ h1{
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+
 	gap: 20px;
 	height: 100%;
 }
 .menuLinks>*{
 	color: var(--dark-color);
 	cursor:pointer;
-
+	text-decoration: none;
 }
 .body{
 		margin:10px;
